# ai-learning-week-building-llm-apps

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python_app.yaml
notebooks/: 00-interfacing-with-llms-in-python.ipynb  01-building-your-first-rag.ipynb  01-interfacing-with-llms-in-python.ipynb  02-building-your-first-rag.ipynb  03-creating-a-simple-agent.ipynb
src/example_project/: main.py
